--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>曹洋的21岁生日快乐！</title>
+    <title>网页标题</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -18,8 +18,8 @@
     <div class="container">
         <!-- 头部 -->
         <header>
-            <h1 class="title">曹洋的21岁生日(阴历)</h1>
-            <div class="subtitle">2025.03.02</div>
+            <h1 class="title">内标题</h1>
+            <div class="subtitle">2026.12.12</div>
         </header>
 
         <!-- 倒计时模块 -->
