--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section class="message-section">
             <h2>生日祝福</h2>
             <div class="message">
-                <p>亲爱的曹洋：</p>
+                <p>致学姐：</p>
                 <p>在你21岁生日来临之际，送上我最真挚的祝福！</p>
                 <p>愿你能继续充满力量与魅力，</p>
                 <p>在新的学期里，继续追逐梦想，绽放光彩！</p>
@@ -123,10 +123,10 @@
         <section class="background-music-section">
             <div class="background-player">
                 <div class="music-info">
-                    <span class="song-title">JVKE - next to you</span>
+                    <span class="song-title">剩下你的听懂我吗</span>
                 </div>
                 <audio id="bgMusic" autoplay loop>
-                    <source src="next.mp3" type="audio/mpeg">
+                    <source src="bgm.ogg" type="audio/mpeg">
                     您的浏览器不支持音频元素。
                 </audio>
                 <div class="music-controls">
