--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>网页标题</title>
+    <title>给学姐做的网站</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -18,7 +18,7 @@
     <div class="container">
         <!-- 头部 -->
         <header>
-            <h1 class="title">内标题</h1>
+            <h1 class="title">学姐的23岁生日</h1>
             <div class="subtitle">2026.12.12</div>
         </header>
 
@@ -52,56 +52,56 @@
                 <!-- 专辑1 -->
                 <div class="music-card">
                     <div class="album-cover">
-                        <img src="Preee.jpg" class="album-image" alt="Pretender">
-                        <div class="play-icon" data-audio="Preee.mp3">
+                        <img src="1szh.jpg" class="album-image" alt="苏州河">
+                        <div class="play-icon" data-audio="1szh.ogg">
                             <i class="fas fa-play"></i>
                         </div>
                     </div>
                     <div class="song-info">
-                        <h3>Pretender</h3>
-                        <p>Official髭男dism</p>
+                        <h3>苏州河</h3>
+                        <p>Read Me</p>
                     </div>
                 </div>
 
                 <!-- 专辑2 -->
                 <div class="music-card">
                     <div class="album-cover">
-                        <img src="Chen.jpg" class="album-image" alt="无人之境">
-                        <div class="play-icon" data-audio="Chen.mp3">
+                        <img src="2tmm.jpg" class="album-image" alt="甜蜜蜜">
+                        <div class="play-icon" data-audio="2tmm.ogg">
                             <i class="fas fa-play"></i>
                         </div>
                     </div>
                     <div class="song-info">
-                        <h3>无人之境</h3>
-                        <p>陈奕迅</p>
+                        <h3>甜蜜蜜</h3>
+                        <p>Smile</p>
                     </div>
                 </div>
 
                 <!-- 专辑3 -->
                 <div class="music-card">
                     <div class="album-cover">
-                        <img src="1314.png" class="album-image" alt="1314 and a 520">
-                        <div class="play-icon" data-audio="1314.mp3">
+                        <img src="3bxy.jpg" class="album-image" alt="我不需要TIFFANY">
+                        <div class="play-icon" data-audio="3bxy.ogg">
                             <i class="fas fa-play"></i>
                         </div>
                     </div>
                     <div class="song-info">
-                        <h3>1314 and a 520</h3>
-                        <p>Philton Solomona</p>
+                        <h3>我不需要TIFFANY</h3>
+                        <p>It's My Day</p>
                     </div>
                 </div>
 
                 <!-- 专辑4 -->
                 <div class="music-card">
                     <div class="album-cover">
-                        <img src="hou.jpg" class="album-image" alt="醉后喜欢我">
-                        <div class="play-icon" data-audio="hou.mp3">
+                        <img src="4.jpg" class="album-image" alt="Better Me">
+                        <div class="play-icon" data-audio="4.ogg">
                             <i class="fas fa-play"></i>
                         </div>
                     </div>
                     <div class="song-info">
-                        <h3>醉后喜欢我</h3>
-                        <p>icyball-冰球乐团</p>
+                        <h3>Better Me</h3>
+                        <p>为什么是单曲专题啊喂</p>
                     </div>
                 </div>
             </div>
@@ -112,9 +112,9 @@
             <h2>生日祝福</h2>
             <div class="message">
                 <p>致学姐：</p>
-                <p>在你21岁生日来临之际，送上我最真挚的祝福！</p>
-                <p>愿你能继续充满力量与魅力，</p>
-                <p>在新的学期里，继续追逐梦想，绽放光彩！</p>
+                <p>在你23岁生日来临之际，送上我最真挚的祝福！</p>
+                <p>愿你能继续坚持学习，</p>
+                <p>考研上岸，继续追逐梦想，绽放光彩！</p>
                 <p>生日快乐！</p>
             </div>
         </section>
@@ -140,7 +140,7 @@
 
     <!-- 页脚 -->
     <footer>
-        <p>Made with ❤️ for 曹洋's 21th Birthday</p>
+        <p>Made with ❤️ for 季丽瑶's 23th Birthday</p>
     </footer>
 
     <script src="script.js"></script>
