--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="song-info">
                         <h3>Better Me</h3>
-                        <p>为什么是单曲专题啊喂</p>
+                        <p>薛凯琪</p>
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
             <h2>生日祝福</h2>
             <div class="message">
                 <p>致学姐：</p>
-                <p>在你23岁生日来临之际，送上我最真挚的祝福！</p>
+                <p>在你22岁生日来临之际，送上我最真挚的祝福！</p>
                 <p>愿你能继续坚持学习，</p>
                 <p>考研上岸，继续追逐梦想，绽放光彩！</p>
                 <p>生日快乐！</p>
